--- a/public/back/pages/login.html
+++ b/public/back/pages/login.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="lt_container">
         <div class="col-md-4 col-md-offset-4">
             <div class="title text-center mb">
                 <h4>后台管理系统</h4>
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-3 control-label">用户名</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="请输入用户名" name="username">
+                        <input type="text" autocomplete="off" class="form-control" id="inputEmail3" placeholder="请输入用户名" name="username">
                     </div>
                 </div>
                 <div class="form-group">
