--- a/public/back/pages/login.html
+++ b/public/back/pages/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>电商后台管理</title>
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../lib/bootstrap-validator/css">
+    <link rel="stylesheet" href="../lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="../css/login.css">
 </head>
 
