--- a/public/back/pages/user.html
+++ b/public/back/pages/user.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乐淘后台管理</title>
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/comment.css">
+    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/comment.css">
 </head>
 
 <body>
@@ -15,17 +15,17 @@
         <div class="aside">
             <div class="branch">
                 <h4>
-                    <a href="index.html">黑马18期</a>
+                    <a href="../index.html">黑马18期</a>
                 </h4>
             </div>
             <div class="user">
-                <img src="images/user.jpg">
+                <img src="../images/user.jpg">
                 <p>超级管理员</p>
             </div>
             <div class="nav">
                 <ul>
                     <li>
-                        <a href="pages/user.html">
+                        <a href="javascript:;" class="now">
                             <span class="glyphicon glyphicon-user"></span>
                             用户管理
                         </a>
@@ -61,12 +61,34 @@
                     <li>
                         <a href="#">管理系统</a>
                     </li>
-                    <li class="active">首页</li>
+                    <li class="active">用户管理</li>
                 </ol>
             </div>
-            <div style="overflow: hidden;">
-                <div class="pic_left pull-left"></div>
-                <div class="pic_right pull-right"></div>
+            <div style="padding:10px;">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th width="10%">序号</th>
+                            <th width="30%">用户名</th>
+                            <th width="30%">手机号</th>
+                            <th width="20%">状态</th>
+                            <th width="10%">操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <script type="text/tempalate" id="tmp">
+                            {{ each rows v i }}
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            {{ /each }}
+                        </script>
+                    </tbody>
+                </table>
             </div>
         </div>
 
@@ -95,10 +117,9 @@
         </div>
     </div>
 </body>
-<script src="lib/jquery/jquery.min.js"></script>
-<script src="lib/bootstrap/js/bootstrap.min.js"></script>
-<script src="lib/echarts/echarts.min.js"></script>
-<script src="js/comment.js"></script>
-<script src="js/index.js"></script>
-
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="../lib/artTemplate/template-web.js"></script>
+<script src="../js/comment.js"></script>
+<script src="../js/user.js"></script>
 </html>
