后台管理完成

--- a/public/back/index.html
+++ b/public/back/index.html
@@ -35,12 +35,12 @@
                             <span class="glyphicon glyphicon-th-list"></span>
                             分类管理</a>
                         <div class="classes" style="display:none;">
-                            <a href="javascript:;">一级分类</a>
-                            <a href="javascript:;">二级分类</a>
+                            <a href="pages/first.html">一级分类</a>
+                            <a href="pages/second.html">二级分类</a>
                         </div>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="pages/product.html">
                             <span class="glyphicon glyphicon-tag"></span>
                             商品管理</a>
                     </li>
