--- a/public/back/pages/first.html
+++ b/public/back/pages/first.html
@@ -25,7 +25,7 @@
             <div class="nav">
                 <ul>
                     <li>
-                        <a href="javascript:;" class="now">
+                        <a href="user.html">
                             <span class="glyphicon glyphicon-user"></span>
                             用户管理
                         </a>
@@ -34,8 +34,8 @@
                         <a href="javascript:;" class="unfold">
                             <span class="glyphicon glyphicon-th-list"></span>
                             分类管理</a>
-                        <div class="classes" style="display:none;">
-                            <a href="first.html">一级分类</a>
+                        <div class="classes" >
+                            <a href="#" class="now">一级分类</a>
                             <a href="second.html">二级分类</a>
                         </div>
                     </li>
@@ -61,44 +61,33 @@
                     <li>
                         <a href="#">管理系统</a>
                     </li>
-                    <li class="active">用户管理</li>
+                    <li class="active">首页</li>
                 </ol>
             </div>
+           <div class="categoryAdd btn btn-default" style="margin-left:10px;">添加一级分类</div>
             <div style="padding:10px;">
                 <table class="table table-bordered table-hover">
                     <thead>
                         <tr>
-                            <th width="10%">序号</th>
-                            <th width="30%">用户名</th>
-                            <th width="30%">手机号</th>
-                            <th width="20%">状态</th>
-                            <th width="10%">操作</th>
+                            <th width="30%">序号</th>
+                            <th width="70%">分类名称</th>
                         </tr>
                     </thead>
                     <tbody>
                         <script type="text/tempalate" id="tmp">
-                            {{ each rows v i }}
-                            <tr>
-                                <td>{{ (page-1)*size+i+1 }}</td>
-                                <td>{{ v.username }}</td>
-                                <td>{{ v.mobile }}</td>
-                                <td>{{ v.isDelete?"正常":"禁用"}}</td>
-                                <td data-isD={{v.isDelete}} data-id={{v.id}}>{{ if v.isDelete }}
-                                     <a href="javascript:;" class="btn btn-danger">禁用</a>
-                                    {{ else}}
-                                     <a href="javascript:;" class="btn btn-default">启用</a>
-                                    {{ /if }}
-                                </td>
-                            </tr>
-                            {{ /each }}
-                        </script>
+                                        {{ each rows v i }}
+                                        <tr>
+                                            <td>{{ (page-1)*size+i+1 }}</td>
+                                            <td>{{ v.categoryName }}</td>
+                                        </tr>
+                                        {{ /each }}
+                                    </script>
                     </tbody>
                 </table>
             </div>
             <div style="text-align:right;">
                 <ul id="pagintor"></ul>
             </div>
-            
         </div>
 
         <!-- 模态框 -->
@@ -119,31 +108,26 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary btn_logout">退出</button>
+                        <a href="JavaScript:;" class="btn btn-primary btn_logout">确定</a>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <div class="modal fade" tabindex="-1" role="dialog" id="isDelete">
+        <div class="modal fade" tabindex="-1" role="dialog" id="categoryAdd">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">
                             <span>&times;</span>
                         </button>
-                        <h4 class="modal-title">温馨提示</h4>
+                        <h4 class="modal-title">添加一级分类</h4>
                     </div>
                     <div class="modal-body">
-                        <p class="text-danger">
-                            <span class="glyphicon glyphicon-info-sign"></span>
-                             你确定要执行此操作吗？
-                        </p>
+                        <input type="text" name="categoryName" id="" class="form-control" placeholder="请输入一级分类的名称">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary btn_yes">确定</button>
+                        <a href="javascript:;" class="btn btn-primary btn_add">添加</a>
                     </div>
                 </div>
             </div>
@@ -155,5 +139,5 @@
 <script src="../lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="../lib/artTemplate/template-web.js"></script>
 <script src="../js/comment.js"></script>
-<script src="../js/user.js"></script>
+<script src="../js/first.js"></script>
 </html>
