--- a/public/front/pages/category.html
+++ b/public/front/pages/category.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘商城首页</title>
-    <link rel="icon" href="favicon.ico">
+    <title>乐淘商城-分类页</title>
+    <link rel="icon" href="../favicon.ico">
     <link rel="stylesheet" href="../lib/mui/css/mui.min.css">
     <link rel="stylesheet" href="../lib/fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/comment.css">
@@ -19,7 +19,7 @@
             <a href="javascript:history.go(-1);" class="head_left">
                 <span class="mui-icon mui-icon-back"></span>
             </a>
-            <a href="pages/search.html" class="head_right">
+            <a href="search.html" class="head_right">
                 <span class="fa fa-search"></span>
             </a>
             <h4>乐淘云购</h4>
@@ -65,25 +65,25 @@
         <div class="lt_footer">
             <ul class="mui-clearfix">
                 <li>
-                    <a href="javascript:;">
+                    <a href="../index.html">
                         <span class="fa fa-home"></span>
                         <p>首页</p>
                     </a>
                 </li>
                 <li class="now">
-                    <a href="pages/category.html">
+                    <a href="javascript:;">
                         <span class="fa fa-bars"></span>
                         <p>分类</p>
                     </a>
                 </li>
                 <li>
-                    <a href="pages/cart.html">
+                    <a href="cart.html">
                         <span class="fa fa-shopping-cart"></span>
                         <p>购物车</p>
                     </a>
                 </li>
                 <li>
-                    <a href="pages/user.html">
+                    <a href="user.html">
                         <span class="fa fa-user"></span>
                         <p>会员中心</p>
                     </a>
