搜索和搜索列表完成

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -118,7 +118,7 @@
                     <div class="lt_product mui-clearfix">
                         <a href="">
                             <img src="images/product.jpg">
-                            <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                            <p class="proName mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
                             <p>
                                 <span class="nowPic">￥520</span>
                                 <span class="oldPic">￥580</span>
@@ -127,7 +127,7 @@
                         </a>
                         <a href="">
                             <img src="images/product.jpg">
-                            <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                            <p class="proName mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
                             <p>
                                 <span class="nowPic">￥520</span>
                                 <span class="oldPic">￥580</span>
@@ -136,7 +136,7 @@
                         </a>
                         <a href="">
                             <img src="images/product.jpg">
-                            <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                            <p class="proName mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
                             <p>
                                 <span class="nowPic">￥520</span>
                                 <span class="oldPic">￥580</span>
@@ -145,7 +145,7 @@
                         </a>
                         <a href="">
                             <img src="images/product.jpg">
-                            <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                            <p class="proName mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
                             <p>
                                 <span class="nowPic">￥520</span>
                                 <span class="oldPic">￥580</span>
