--- a/public/front/pages/search.html
+++ b/public/front/pages/search.html
@@ -85,6 +85,7 @@
 <script src="../lib/mui/js/mui.min.js"></script>
 <script src="../lib/artTemplate/template-web.js"></script>
 <script src="../lib/zepto/zepto.min.js"></script>
+<script src="../js/comment.js"></script>
 <script src="../js/search.js"></script>
 
 </html>
