--- a/public/front/pages/searchList.html
+++ b/public/front/pages/searchList.html
@@ -28,6 +28,48 @@
                         <input type="text" placeholder="请输入搜索关键字">
                         <button class="mui-btn mui-btn-blue">搜索</button>
                     </div>
+                    <div class="lt_sereen">
+                        <ul class="mui-clearfix">
+                            <li>
+                                <a href="javascript:;">上架时间
+                                    <span class="fa fa-angle-down"></span>
+                                </a>
+                            </li>
+                            <li data-type="price">
+                                <a href="javascript:;">价格
+                                    <span class="fa fa-angle-down"></span>
+                                </a>
+                            </li>
+                            <li data-type="num">
+                                <a href="javascript:;">库存
+                                    <span class="fa fa-angle-down"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">折扣
+                                    <span class="fa fa-angle-down"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lt_product mui-clearfix">
+                        <div class="lt_box"></div>
+                    </div>
+                    <script type="text/template" id="tmp">
+                        {{ if list.length==0}}
+                        <p>没有更多商品</p>
+                        {{else}} {{ each list v}}
+                        <a href="product.html?productId={{ v.id }}">
+                            <img src="../..{{ v.pic[0].picAddr }}" alt="">
+                            <p class="proName mui-ellipsis-2">{{v.proName}}</p>
+                            <p>
+                                <span class="nowPic">&yen;{{ v.price }}</span>
+                                <span class="oldPic">&yen;{{ v.oldPrice }}</span>
+                            </p>
+                            <button class="mui-btn mui-btn-blue">立即购买</button>
+                        </a>
+                        {{ /each }} {{ /if }}
+                    </script>
                 </div>
             </div>
         </div>
@@ -64,6 +106,7 @@
 <script src="../lib/mui/js/mui.min.js"></script>
 <script src="../lib/artTemplate/template-web.js"></script>
 <script src="../lib/zepto/zepto.min.js"></script>
+<script src="../js/comment.js"></script>
 <script src="../js/searchList.js"></script>
 
 </html>
