详情页完成

--- a/public/front/pages/searchList.html
+++ b/public/front/pages/searchList.html
@@ -22,7 +22,7 @@
             <h4>乐淘云购</h4>
         </div>
         <div class="lt_main">
-            <div class="mui-scroll-wrapper">
+            <div class="mui-scroll-wrapper" id="refreshContainer">
                 <div class="mui-scroll">
                     <div class="lt_search">
                         <input type="text" placeholder="请输入搜索关键字">
